--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         .font-lato {
             font-family: 'Lato', sans-serif;
         }
+        .background{
+            background-color: rgba(0, 0, 0, 0.302);
+        }
     </style>
 </head>
 
@@ -56,6 +59,61 @@
             </div>
 
         </nav>
+        <section class="mt-14">
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img class="background" src="/images/banner1.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                    
+                    <div class="items-center">
+                        <h2 class="text-white text-7xl font-extrabold">Exotic tastes at your <br>doorstep</h2>
+                        <p class="text-white text-2xl mt-3">We supply highly quality organic products</p>
+                        <button class="btn btn-error text-white mt-3 ">Shop now</button>
+                      </div>
+                      <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                  
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img class="background" src="/images/banner2.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <div class="items-center">
+                        <h2 class="text-white text-7xl font-extrabold">Exotic tastes at your <br>doorstep</h2>
+                        <p class="text-white text-2xl mt-3">We supply highly quality organic products</p>
+                        <button class="btn btn-error text-white mt-3 ">Shop now</button>
+                      </div> 
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img class="" src="/images/banner3.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <div class="items-center">
+                        <h2 class="text-white text-7xl font-extrabold">Exotic tastes at your <br>doorstep</h2>
+                        <p class="text-white text-2xl mt-3">We supply highly quality organic products</p>
+                        <button class="btn btn-error text-white mt-3 ">Shop now</button>
+                      </div> 
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide4" class="carousel-item relative w-full">
+                  <img src="/images/banner4.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <div class="items-center">
+                        <h2 class="text-white text-7xl font-extrabold">Exotic tastes at your <br>doorstep</h2>
+                        <p class="text-white text-2xl mt-3">We supply highly quality organic products</p>
+                        <button class="btn btn-error text-white mt-3 ">Shop now</button>
+                      </div> 
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+              </div>
+
+        </section>
     </header>
     <main class="font-lato px-24">
         <section class="flex justify-between m-7">
