--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="mt-14">
             <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full">
-                  <img class="background" src="/images/banner1.png" class="w-full" />
+                  <img class="background" src="images/banner1.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a> 
                     
@@ -76,7 +76,7 @@
                   
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                  <img class="background" src="/images/banner2.png" class="w-full" />
+                  <img class="background" src="images/banner2.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a>
                     <div class="items-center">
@@ -88,7 +88,7 @@
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full">
-                  <img class="" src="/images/banner3.png" class="w-full" />
+                  <img class="" src="images/banner3.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <div class="items-center">
@@ -100,7 +100,7 @@
                   </div>
                 </div> 
                 <div id="slide4" class="carousel-item relative w-full">
-                  <img src="/images/banner4.png" class="w-full" />
+                  <img src="images/banner4.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-2/5 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <div class="items-center">
@@ -159,7 +159,7 @@
             <!-- card1 -->
             <div class="card w-80 bg-base-100 border-2 border-green-900 ">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title text-[#121212] font-bold text-3xl ">12.90$ - 18.85$</h2>
@@ -177,7 +177,7 @@
             <!-- card2 -->
             <div class="card w-80 bg-base-100 border-2 border-green-900 ">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title text-[#121212] font-bold text-3xl ">12.90$ - 18.85$</h2>
@@ -195,7 +195,7 @@
             <!-- card3 -->
             <div class="card w-80 bg-base-100 border-2 border-green-900 ">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title text-[#121212] font-bold text-3xl ">12.90$ - 18.85$</h2>
@@ -213,7 +213,7 @@
             <!-- card4 -->
             <div class="card w-80 bg-base-100 border-2 border-green-900 ">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2 class="card-title text-[#121212] font-bold text-3xl ">12.90$ - 18.85$</h2>
@@ -250,7 +250,7 @@
                             <!-- m-card1 -->
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member1.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member1.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center">
                                     <h2 class="card-title text-white">Awlad Hossain!</h2>
@@ -316,7 +316,7 @@
                             <!-- m-card2 -->
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member2.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member2.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center">
                                     <h2 class="card-title text-white">Awlad Hossain!</h2>
@@ -382,7 +382,7 @@
                             <!-- m-card3 -->
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member3.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member3.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center">
                                     <h2 class="card-title text-white">Awlad Hossain!</h2>
@@ -448,7 +448,7 @@
                             <!-- m-card4 -->
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
-                                    <img src="/images/member4.png" alt="Shoes" class="rounded-xl" />
+                                    <img src="images/member4.png" alt="Shoes" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center">
                                     <h2 class="card-title text-white">Awlad Hossain!</h2>
